--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>loader</title>
+    <title>Abhishek Jha - Visual Designer</title>
+    <link rel="icon" href="https://abhishekjha.me/favicon.f978ef38.svg">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css">
@@ -21,7 +22,6 @@
     </div>
     <div class="green"></div>
     <div id="main">
-
         <div class="home">
             <nav>
                 <a href="#">
